--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"express": "^4.18.2",
 		"json-server": "^0.17.3",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.2",
 		"nodemon": "^2.0.22",
 		"npm-run-all": "^4.1.5",
 		"pg": "^8.10.0",
