--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"axios": "^1.8.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hot-toast": "^2.5.2",
 		"react-quill": "^2.0.0",
 		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.3.0",
